fix: fix #input and #dropdown label wrapping line-height

--- a/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
+++ b/packages/dnb-ui-lib/src/components/dropdown/style/_dropdown.scss
@@ -434,8 +434,9 @@
     padding: 0.5rem 0 1rem var(--dropdown-padding-horizontal);
   }
 
-  > .dnb-form-label {
+  & > .dnb-form-label {
     margin-right: 1rem;
+    line-height: var(--font-size-basis);
   }
 
   label + &[class*='__form-status'] {
